# rust-aws-lambda

./: Cargo.toml  Makefile  README.md
