cargo-features = ["edition2021"]

[package]
name = "rust-aws-lambda"
version = "0.1.0"
autobins = false
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
tokio = { version = "1.0", features = ["macros",] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"